--- a/src/express/templates/pages/post.pug
+++ b/src/express/templates/pages/post.pug
@@ -45,7 +45,7 @@ block content
               if errors && errors.find(error => error.path[0] === 'text')
                 p.comments__error= errors.find(error => error.path[0] === 'text').message
             else
-              button.comments__button.button.button--colored(type="submit") Войти
+              a.comments__button.button.button--colored(href="/login") Войти
               .comments__registration
                 p.text.text--signature
                   b.title.title--small Регистрация
