--- a/src/express/templates/pages/errors/400.pug
+++ b/src/express/templates/pages/errors/400.pug
@@ -4,7 +4,7 @@ html(lang=`ru`)
   body
     .wrapper-color
       header.header.header--error
-        a.header__logo.header__logo--404.logo(href=`#`)
+        a.header__logo.header__logo--404.logo(href=`/`)
           img(src=`/img/icons/logo.svg` alt=`логотип Типотеки`)
         a.header__registration(href=`/register`) Регистрация
         a.header__enter(href=`/login`) Вход с паролем
