--- a/src/express/templates/common/featured.pug
+++ b/src/express/templates/common/featured.pug
@@ -15,12 +15,13 @@ div(class=`main-page__section-flex ${hotArticles.length ? `` : `main-page__secti
     h2.last__name
       | Последние комментарии
       span.last__icon.last__icon--cloud
-    if latestComments
+    if latestComments.length
       ul.last__list
         each comment in latestComments
           li.last__list-item
-            img.last__list-image(src="img/avatar-small-1.png" width="20" height="20" alt="Аватар пользователя")
-            b.last__list-name Анна Артамонова
+            if comment.user.avatar
+              img.last__list-image(src=`/img/${comment.user.avatar}` width="20" height="20" alt="Аватар пользователя")
+            b.last__list-name= `${comment.user.firstName} ${comment.user.lastName}`
             a.last__list-link(href=`/articles/${comment.articleId}`)= truncate(comment.text, 100, true)
     else
       p.last__empty Здесь пока ничего нет...
