--- a/src/express/templates/common/article-preview.pug
+++ b/src/express/templates/common/article-preview.pug
@@ -10,7 +10,7 @@ li(class=`preview__item ${article.picture ? `` : `preview__item--noimage`}`)
   h3.preview__name
     a.preview__name-link(href=`/articles/${article.id}`) #{article.title}
   p.preview__text #{article.announce}
-  a.preview__comment(href="#")
+  a.preview__comment(href=`/articles/${article.id}`)
     | Комментарии
     span.preview__cloud
     b.preview__comment-count= article.comments.length
