--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -40,7 +40,7 @@ html(lang=`ru`)
 
 
     div(class=`${plainBackground ? 'wrapper-color' : 'wrapper'}`)
-      include ./header
+      include header/header-main
       block content
       include ./footer
       script(src='/js/vendor.js')
