--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -43,5 +43,12 @@ html(lang=`ru`)
       include header/header-main
       block content
       include ./footer
-      script(src='/js/vendor.js')
-      script(src='/js/main.js')
+
+    if main
+      include ../common/featured/latest-comment-template
+      script(src='https://cdn.socket.io/4.0.1/socket.io.js')
+      script(src='/js/socket.js')
+
+    script(src='/js/vendor.js')
+    script(src='/js/main.js')
+
