Update hot articles via sockets

--- a/src/express/templates/layout/layout.pug
+++ b/src/express/templates/layout/layout.pug
@@ -46,6 +46,7 @@ html(lang=`ru`)
 
     if main
       include ../common/featured/latest-comment-template
+      include ../common/featured/hot-article-template
       script(src='https://cdn.socket.io/4.0.1/socket.io.js')
       script(src='/js/socket.js')
 
